# apart-forecasting-tool

./: .env.example  .gitignore  AGENTS.md  CNAME  DEVELOPER_README.md  FOLLOW_UPS.md  NEXT_CODEX_PROMPT_TASKS.md  README.md  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js  tailwind.config.ts  vite.config.js  vite.config.ts
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: countries.py  forecast_benchmarks.py  forecast_challenges.py  forecast_models.py  locations.py  model_runs.py  news.py  sources.py  timeseries.py  utils.py
backend/app/connectors/: __init__.py  base.py  cdc_flusight.py  cdc_nwss.py  imf_portwatch.py  infrastructure.py  marad_ports.py  news.py  news_scraper_placeholder.py  nga_world_port_index.py  noaa_ais.py  opensky.py  ourairports.py  public_health.py  reich_lab_flusight.py  usace_navigation.py  user_upload.py  wastewater_scan.py  who_flunet.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: __init__.py  common.py  country.py  forecast.py  forecast_challenge.py  location.py  model.py  news.py  observation.py  prediction_set.py  quality.py  source.py
backend/app/services/: __init__.py  data_quality.py  experimental_tabpfn_ts.py  feature_availability.py  forecast_benchmark.py  forecast_challenges.py  forecast_prediction_sets.py  forecast_scoring.py  model_eligibility.py  normalization.py  source_registry.py  submissions.py  timeseries_availability.py
backend/app/tests/: conftest.py  (+12 more)
(+216 files in other folders)
