[project]
name = "sentinel-atlas-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for Sentinel Atlas aggregate data readiness."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "alembic>=1.13",
  "numpy>=1.26",
  "pandas>=2.2",
  "psycopg[binary]>=3.1",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
forecast = [
  "statsforecast>=1.7",
]
experimental = [
  "tabpfn-time-series>=1.0,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 120
